--- a/.htaccess
+++ b/.htaccess
@@ -6,11 +6,11 @@
 <IfModule mod_rewrite.c>
 RewriteEngine On
 RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
-RewriteBase /pluggin/
+RewriteBase /plugin/
 RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /pluggin/index.php [L]
+RewriteRule . /plugin/index.php [L]
 </IfModule>
 
 # END WordPress
